--- a/index.html
+++ b/index.html
@@ -3,58 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MexWeb | Tecnología x86 y Software Libre</title>
+    <title>MexWeb Tech | TikTok & Configs</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { background-color: #0f172a; color: #f8fafc; }
-        .tech-gradient { background: linear-gradient(90deg, #38bdf8, #818cf8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-        .card-hover:hover { border-color: #38bdf8; transform: translateY(-5px); transition: all 0.3s ease; }
+        body { background-color: #020617; color: #e2e8f0; font-family: 'Inter', sans-serif; }
+        .tab-content { display: none; }
+        .tab-content.active { display: block; }
+        .nav-btn.active { border-bottom: 2px solid #38bdf8; color: #38bdf8; }
+        .glass-card { background: rgba(30, 41, 59, 0.5); backdrop-filter: blur(10px); border: 1px solid rgba(56, 189, 248, 0.2); }
     </style>
 </head>
 <body>
-    <nav class="p-6 border-b border-slate-800 flex justify-between items-center bg-slate-900/50 backdrop-blur-md sticky top-0 z-50">
-        <h1 class="text-2xl font-bold tech-gradient tracking-tighter">MEXWEB.ME</h1>
-        <div class="hidden md:flex space-x-8 font-medium">
-            <a href="https://radio.mexweb.me" class="hover:text-sky-400 transition">Radio Stream</a>
-            <a href="https://nas.mexweb.me" class="hover:text-sky-400 transition">Cloud NAS</a>
-            <a href="https://terminal.mexweb.me" class="hover:text-sky-400 transition">Terminal</a>
+    <nav class="p-4 border-b border-slate-800 bg-slate-900/80 sticky top-0 z-50">
+        <div class="max-w-6xl mx-auto flex justify-between items-center">
+            <h1 class="text-xl font-black tracking-tighter text-sky-400">MEXWEB<span class="text-white">.ME</span></h1>
+            <div class="flex space-x-4 text-xs font-bold uppercase">
+                <a href="https://radio.mexweb.me" class="hover:text-sky-400">Radio</a>
+                <a href="https://nas.mexweb.me" class="hover:text-sky-400">NAS</a>
+            </div>
         </div>
     </nav>
 
-    <header class="py-24 px-6 text-center">
-        <div class="inline-block px-4 py-1.5 mb-6 text-sm font-semibold tracking-wide text-sky-400 uppercase bg-sky-400/10 rounded-full">
-            Servidor x86 Personal Online
+    <div class="max-w-4xl mx-auto mt-8 px-4">
+        <div class="flex space-x-8 border-b border-slate-800 mb-8">
+            <button onclick="openTab('tiktok')" id="btn-tiktok" class="nav-btn active pb-2 font-bold uppercase tracking-widest text-sm">TikTok Feed</button>
+            <button onclick="openTab('configs')" id="btn-configs" class="nav-btn pb-2 font-bold uppercase tracking-widest text-sm">Configuraciones</button>
+            <button onclick="openTab('server')" id="btn-server" class="nav-btn pb-2 font-bold uppercase tracking-widest text-sm">Estado x86</button>
         </div>
-        <h2 class="text-6xl font-extrabold mb-6 leading-tight">El futuro de la <span class="tech-gradient">Tecnología</span> en tus manos</h2>
-        <p class="text-slate-400 text-xl max-w-2xl mx-auto leading-relaxed">
-            Explorando sistemas antiX, optimización de hardware x86 y servicios auto-hospedados.
-        </p>
-    </header>
 
-    <section class="max-w-6xl mx-auto px-6 mb-24">
-        <h3 class="text-2xl font-bold mb-8 text-center">Mis Servicios Locales</h3>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <a href="https://radio.mexweb.me" class="card-hover bg-slate-800/40 p-8 rounded-2xl border border-slate-700 block">
-                <div class="text-3xl mb-4">📻</div>
-                <h4 class="text-xl font-bold">Radio Server</h4>
-                <p class="text-slate-400 mt-2 text-sm">Streaming de audio desde mi servidor personal.</p>
-            </a>
-            <a href="https://nas.mexweb.me" class="card-hover bg-slate-800/40 p-8 rounded-2xl border border-slate-700 block">
-                <div class="text-3xl mb-4">📂</div>
-                <h4 class="text-xl font-bold">File Manager</h4>
-                <p class="text-slate-400 mt-2 text-sm">Acceso remoto a mis archivos en el NAS personal.</p>
-            </a>
-            <div class="card-hover bg-slate-800/40 p-8 rounded-2xl border border-slate-700">
-                <div class="text-3xl mb-4">💻</div>
-                <h4 class="text-xl font-bold">Tech Blog</h4>
-                <p class="text-slate-400 mt-2 text-sm">Artículos sobre Linux, antiX y hardware antiguo.</p>
+        <div id="tiktok" class="tab-content active animate-fade-in">
+            <h2 class="text-3xl font-bold mb-6">Últimos Clips Tech</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="glass-card rounded-2xl overflow-hidden p-4">
+                    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@TU_USUARIO" data-unique-id="TU_USUARIO" data-embed-type="video" style="max-width: 605px;min-width: 325px;" > <section> </section> </blockquote> 
+                    <script async src="https://www.tiktok.com/embed.js"></script>
+                </div>
+                <div class="flex flex-col justify-center glass-card p-6 rounded-2xl">
+                    <p class="text-sky-400 font-mono mb-2">#Linux #x86 #Networking</p>
+                    <h3 class="text-xl font-bold mb-4">Tutoriales Rápidos</h3>
+                    <p class="text-slate-400">Sígueme en TikTok para ver cómo configuro mi servidor antiX y los túneles de Cloudflare en tiempo real.</p>
+                </div>
             </div>
         </div>
-    </section>
 
-    <footer class="py-12 border-t border-slate-800 text-center text-slate-500">
-        <p class="mb-2">© 2025 MexWeb - Desarrollado por saulmx87</p>
-        <p class="text-xs uppercase tracking-widest">Alojado en GitHub Pages | Túneles via Cloudflare</p>
-    </footer>
+        <div id="configs" class="tab-content animate-fade-in">
+            <h2 class="text-3xl font-bold mb-6">Guías y Scripts</h2>
+            <div class="space-y-4">
+                <details class="glass-card p-4 rounded-xl cursor-pointer">
+                    <summary class="font-bold text-sky-400">Optimizar antiX en equipos antiguos</summary>
+                    <div class="mt-4 p-4 bg-black/50 rounded font-mono text-sm text-green-400">
+                        sudo apt update && sudo apt install preload zram-tools
+                    </div>
+                </details>
+                <details class="glass-card p-4 rounded-xl cursor-pointer">
+                    <summary class="font-bold text-sky-400">Configurar Túnel de Cloudflare</summary>
+                    <p class="mt-2 text-slate-300">Usa este comando para exponer tu NAS local de forma segura:</p>
+                    <div class="mt-2 p-4 bg-black/50 rounded font-mono text-sm text-green-400">
+                        cloudflared tunnel run --url http://localhost:8080 nombre-tunel
+                    </div>
+                </details>
+            </div>
+        </div>
+
+        <div id="server" class="tab-content animate-fade-in text-center py-12">
+            <div class="glass-card p-10 rounded-full inline-block mb-6 border-2 border-green-500 shadow-[0_0_20px_rgba(34,197,94,0.3)]">
+                <span class="text-4xl">🟢</span>
+            </div>
+            <h2 class="text-2xl font-bold">Servidor x86 Online</h2>
+            <p class="text-slate-400 mt-2">Corriendo sobre antiX Linux vía Cloudflare Tunnel</p>
+        </div>
+    </div>
+
+    <script>
+        function openTab(tabName) {
+            var i, tabcontent, navbtn;
+            tabcontent = document.getElementsByClassName("tab-content");
+            for (i = 0; i < tabcontent.length; i++) { tabcontent[i].classList.remove("active"); }
+            navbtn = document.getElementsByClassName("nav-btn");
+            for (i = 0; i < navbtn.length; i++) { navbtn[i].classList.remove("active"); }
+            document.getElementById(tabName).classList.add("active");
+            document.getElementById("btn-" + tabName).classList.add("active");
+        }
+    </script>
 </body>
 </html>
