--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="max-w-6xl mx-auto flex justify-between items-center">
             <h1 class="text-xl font-black tracking-tighter text-sky-400">MEXWEB<span class="text-white">.ME</span></h1>
             <div class="flex space-x-4 text-xs font-bold uppercase">
-                <a href="https://radio.mexweb.me" class="hover:text-sky-400">Radio</a>
+                <a href="https://radio.mexweb.me/radio.html" class="hover:text-sky-400">Radio</a>
                 <a href="https://nas.mexweb.me" class="hover:text-sky-400">NAS</a>
             </div>
         </div>
@@ -35,7 +35,7 @@
             <h2 class="text-3xl font-bold mb-6">Últimos Clips Tech</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="glass-card rounded-2xl overflow-hidden p-4">
-                    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@TU_USUARIO" data-unique-id="TU_USUARIO" data-embed-type="video" style="max-width: 605px;min-width: 325px;" > <section> </section> </blockquote> 
+                    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@mexwebmx" data-unique-id="Mexwebmx" data-embed-type="video" style="max-width: 605px;min-width: 325px;" > <section> </section> </blockquote> 
                     <script async src="https://www.tiktok.com/embed.js"></script>
                 </div>
                 <div class="flex flex-col justify-center glass-card p-6 rounded-2xl">
