Update Radio Web link to new URL

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <span class="logo-text">MEXWEB</span><span class="text-white">.ME</span>
       </h1>
       <div class="flex space-x-6 text-sm font-bold uppercase tracking-wide">
-        <a href="https://radio.mexweb.me/" target="_blank" class="nav-link">Radio Web</a>
+        <a href="https://radio.mexweb.me/radio.html" target="_blank" class="nav-link">Radio Web</a>
         <a href="https://www.tiktok.com/@mexwebmx" target="_blank" class="nav-link">TikTok</a>
       </div>
     </div>
