Update text and button label in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div>
         <h2 class="text-3xl font-bold text-white mb-2">Networking, Linux & Cisco</h2>
         <p class="text-slate-400 text-lg">
-          Recursos técnicos, configuraciones rápidas y el feed oficial de TikTok.
+          Recursos técnicos, configuraciones rápidas e informacion para estudiantes e informaticos
         </p>
       </div>
     </div>
@@ -126,7 +126,7 @@
       <button onclick="switchTab('tiktok')" id="tab-btn-tiktok" class="nav-btn active text-lg font-bold px-4 py-2">TIKTOK</button>
       <button onclick="switchTab('cisco')" id="tab-btn-cisco" class="nav-btn text-lg font-bold px-4 py-2">CISCO IOS</button>
       <button onclick="switchTab('linux')" id="tab-btn-linux" class="nav-btn text-lg font-bold px-4 py-2">LINUX & SERVIDORES</button>
-      <button onclick="switchTab('mikrotik')" id="tab-btn-mikrotik" class="nav-btn text-lg font-bold px-4 py-2">MIKROTIK (ROS)</button>
+      <button onclick="switchTab('mikrotik')" id="tab-btn-mikrotik" class="nav-btn text-lg font-bold px-4 py-2">MIKROTIK</button>
       <button onclick="switchTab('iot')" id="tab-btn-iot" class="nav-btn text-lg font-bold px-4 py-2">IoT / ESP32</button>
       <button onclick="switchTab('sysadmin')" id="tab-btn-sysadmin" class="nav-btn text-lg font-bold px-4 py-2">SYSADMIN / REPAIR</button>
     </div>
