--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
     </div>
   </header>
 
+  <!-- Nueva sección de biografía del creador -->
+  <section class="max-w-6xl mx-auto px-4 mb-10 relative z-10 animate-fade-in">
+    <div class="glass-card rounded-2xl p-8 flex flex-col md:flex-row items-center gap-8">
+      <div class="text-center md:text-left">
+        <h2 class="text-3xl font-bold text-white mb-4">Sobre el Creador</h2>
+        <p class="text-slate-300 text-lg leading-relaxed mb-6">
+          ¡Hola! Soy Saul Mercado, un apasionado de la tecnología y las redes. Mi enfoque se centra en la innovación y la mejora continua, buscando siempre que cada proyecto sea funcional y escalable. Cuando no estoy frente a una terminal o configurando equipos, me gusta compartir lo que aprendo con la comunidad.
+        </p>
+      </div>
+      <div class="flex-shrink-0">
+        <img src="bio.jpg" alt="Saul Mercado - Creador de MexWeb" class="w-32 h-32 md:w-40 md:h-40 rounded-full border-4 border-sky-400 shadow-2xl animate-float object-cover">
+      </div>
+    </div>
+  </section>
+
   <main class="max-w-6xl mx-auto px-4 pb-40 relative z-10">
     
     <div class="flex flex-wrap gap-4 border-b border-slate-700 mb-8 pb-2 animate-fade-in">
