--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-```html name=index.html
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MexWeb Tech | TikTok & Configs</title>
+  <title>MexWeb | Redes y Tecnologia</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -105,11 +104,11 @@
     <div class="max-w-6xl mx-auto px-4 py-2 flex items-center justify-between text-sm">
       <div class="flex items-center gap-2">
         <span class="animate-pulse text-green-500">●</span>
-        <span class="text-sky-400 font-bold">MEXWEB RADIO</span>
+        <span class="text-sky-400 font-bold">Radio status: Online!</span>
         <span id="autoStatus" class="text-slate-400 hidden md:inline">- Conectando...</span>
       </div>
       <button id="unmuteTopBtn" class="bg-sky-600 hover:bg-sky-500 text-white px-4 py-1 rounded-full text-xs font-bold transition-all animate-bounce hidden">
-        🔊 ACTIVAR SONIDO
+        🔊 DALE PLAY
       </button>
     </div>
   </section>
@@ -119,12 +118,14 @@
       <h1 class="text-3xl font-black tracking-tighter cursor-pointer flex items-center gap-3" onclick="location.reload()">
         <img src="logo-mexweb.png" alt="MexWeb Logo" class="w-10 h-10 rounded-full border-2 border-sky-400 shadow-lg">
         <span>
-          <span class="logo-text">MEXWEB</span><span class="text-white">.ME</span>
+          <span class="logo-text">MEXWEB</span><span class="text-white"> ¡Estableciendo Conexiones!</span>
         </span>
       </h1>
       <div class="flex space-x-6 text-sm font-bold uppercase tracking-wide">
         <a href="https://radio.mexweb.me/radio.html" target="_blank" class="nav-link">Radio Web</a>
         <a href="https://www.tiktok.com/@mexwebmx" target="_blank" class="nav-link">TikTok</a>
+        <a href="https://nas.mexweb.me" target="_blank" class="nav-link">File Browser</a>
+        <a href="https://terminal.mexweb.me" target="_blank" class="nav-link">SSH</a>
       </div>
     </div>
   </nav>
@@ -133,9 +134,9 @@
     <div class="glass-card rounded-2xl p-8 flex flex-col md:flex-row items-center gap-8">
       <div class="text-6xl animate-float">📡</div>
       <div>
-        <h2 class="text-3xl font-bold text-white mb-2">Networking, Linux & Cisco</h2>
+        <h3 class="text-3xl font-bold text-white mb-2">Explorando Redes y Tecnología</h3>
         <p class="text-slate-400 text-lg">
-          Recursos técnicos, configuraciones rápidas e informacion para estudiantes e informaticos
+          Recursos técnicos, configuraciones rápidas e informacion para estudiantes e informaticos.
         </p>
       </div>
     </div>
@@ -145,9 +146,9 @@
   <section class="max-w-6xl mx-auto px-4 mb-10 relative z-10 animate-fade-in">
     <div class="glass-card rounded-2xl p-8 flex flex-col md:flex-row items-center gap-8">
       <div class="text-center md:text-left">
-        <h2 class="text-3xl font-bold text-white mb-4">Sobre el Creador</h2>
+        <h2 class="text-3xl font-bold text-white mb-4">Sobre mi</h2>
         <p class="text-slate-300 text-lg leading-relaxed mb-6">
-          ¡Hola! Soy Saul Mercado, un apasionado de la tecnología y las redes. Mi enfoque se centra en la innovación y la mejora continua, buscando siempre que cada proyecto sea funcional y escalable. Cuando no estoy frente a una terminal o configurando equipos, me gusta compartir lo que aprendo con la comunidad.
+          ¡Hola! Soy Saul Mercado, Ing. en Telematica y apasionado de la tecnología y las redes. Mi enfoque se centra en la innovación y la mejora continua, buscando siempre que cada proyecto sea funcional y escalable. Cuando no estoy frente a una terminal o configurando equipos, me gusta compartir lo que aprendo con la comunidad.
         </p>
       </div>
       <div class="flex-shrink-0">
