Update autoStatus message for manual start prompt

--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
             unmuteTopBtn.classList.remove('hidden');
           }).catch(() => {
             playerStatus.textContent = "Haz clic en Play para iniciar";
-            autoStatus.textContent = "Esperando inicio manual";
+            autoStatus.textContent = "Haz clic en Play para iniciar";
             isPlaying = false;
             updateUI(false);
           });
